@@ -37,11 +37,11 @@
 			<group choice='opt'>
 				<arg><option>-q</option> <replaceable>message QoS</replaceable></arg>
 			</group>
-			<group choice='opt' rep="repeat">
-				<arg><option>-t</option> <replaceable>message topic</replaceable></arg>
-			</group>
 			<group choice='opt'>
 				<arg><option>-v</option></arg>
+			</group>
+			<group choice='plain' rep="repeat">
+				<arg><option>-t</option> <replaceable>message topic</replaceable></arg>
 			</group>
 		</cmdsynopsis>
 	</refsynopsisdiv>
@@ -127,7 +127,7 @@
 					<para>The mqtt topic to subscribe to. See
 					<citerefentry><refentrytitle>mqtt</refentrytitle><manvolnum>7</manvolnum></citerefentry>
 					for more information on mqtt topics.</para>
-					<para>This option may be repeated.</para>
+					<para>This option may be repeated to subscribe to multiple topics.</para>
 				</listitem>
 			</varlistentry>
 			<varlistentry>
